# nemlig-shopper

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
data/: input.txt
nemlig_shopper/: __init__.py  api.py  cli.py  config.py  export.py  favorites.py  llm_tools.py  matcher.py  pantry.py  pantry_tui.py  planner.py  preference_engine.py  preferences.py  price_tracker.py  recipe_parser.py  scaler.py  tui.py  units.py
tests/: conftest.py  test_api.py  test_cli.py  test_cli_slots_bug.py  test_config.py  test_e2e.py  test_export.py  test_favorites.py  test_llm_tools.py  test_matcher.py  test_matcher_dietary.py  test_pantry.py  test_planner.py  test_preference_engine.py  test_preferences.py  test_price_tracker.py  test_recipe_parser.py  test_scaler.py  test_shopping_integration.py  test_tui.py  test_units.py
