[project]
name = "nemlig-shopper"
version = "1.0.0"
description = "Recipe-to-Cart CLI Tool for Nemlig.com"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.28.0",
    "recipe-scrapers>=14.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=16.0",
    "textual>=0.50.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
]

[project.scripts]
nemlig = "nemlig_shopper.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/nemlig-shopper"
Repository = "https://github.com/yourusername/nemlig-shopper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nemlig_shopper"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "responses>=0.25.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (may require network access)",
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
strictListInference = true
strictDictionaryInference = true
reportMissingTypeStubs = false
